Bug 1349253 - modify the assertion; r=jwwang

While MDSM calls MFR::Seek(), MFR tries to do video seek first and then the audio seek.

Video-seek and audio-seek are applied sequentially, and if something wrong in video-seek,
MFR discards the whole seek operation without applying audio-seek.

video    | audio     |
waiting  | waiting   | What MDSM receives
-----------------------------------------------------------------------------
   X     |    X      | resove mSeekRequest
-----------------------------------------------------------------------------
   O     |    X      | reject mSeekRequest with type=VIDEO, error=WAITING
-----------------------------------------------------------------------------
   X     |    O      | reject mSeekRequest with type=AUDIO, error=WAITING
-----------------------------------------------------------------------------
   O     |    O      | reject mSeekRequest with type=VIDEO, error=WAITING
-----------------------------------------------------------------------------

So, here, AccurateSeekingState::OnSeekRejected() has a unified code to handle
WAITING_FOR_DATA error for both video and audio type, and it uses the
aReject.mType variable to distinguish different types.

But, it mixes the assertions. We should also apply assertions according to the
type that is in concern.



MozReview-Commit-ID: F7RpnFghcKk